--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 *{
     margin: 0;
     padding: 0;
@@ -33,7 +34,7 @@ nav .navigation ul li a {
     transition: 0.3s ease;
 }
 nav .navigation ul li a:hover {
-    color: blueviolet;
+    color: palevioletred;
 }
 #home {
     background-image: linear-gradient(rgba(9, 5, 54,0.3),rgba(5, 4, 46, 0.7)),(url("https://i.postimg.cc/Bbj7zYGq/woman-holding-up-a-face-cream-1296x728-header-1.jpg"));
