--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ nav{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 1vw 8vw;
+    padding: 1vw 1vw;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
 }
 nav img{
@@ -43,4 +43,19 @@ nav .navigation ul li a:hover {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
+}
+.header{
+    background-color: rgb(233, 180, 198);
+    padding: 10px;
+    text-align: center;
+}
+.row-cols-1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px;
+}
+.card {
+    width: 200px;
+    margin: 15px;
 }
