--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,30 @@ button {
     font-size: 28px;
     font-weight: bold;
 }
+body {
+    margin: 0;
+    padding: 0;
+}
+
+div {
+    position: relative;
+    
+}
+
+img {
+    width: 100%;
+    height: auto; 
+}
+
+.text-1 {
+    position: absolute;
+    top: 50%; 
+    left: 80%; 
+    transform: translate(-50%, -50%); 
+    color: white; 
+    font-weight: 80;
+    text-align: center;
+}
+.storeName {
+    color: rgb(248, 133, 170);
+}
