--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ footer{
 #form1{
     padding: 60px;
 }
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -159,3 +160,80 @@ img {
 .storeName {
     color: rgb(248, 133, 170);
 }
+
+@media (max-width: 720px) {
+    body {
+        padding: 10px;
+    }
+    .navigation {
+        display: none;
+    }
+}
+@media (max-width: 300px) {
+    h4.para1 {
+      font-size: 14px; 
+    }
+  }
+  @media (max-width: 720px) {
+    nav {
+        padding: 10px;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    #home img {
+        width: 100%; 
+    }
+
+    #home h1.text-1 {
+        font-size: 18px; 
+    }
+}
+@media (max-width: 300px) {
+    #home h1.text-1 {
+        font-size: 16px; 
+    }
+}
+@media (max-width: 720px) {
+    nav {
+        padding: 10px;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .header h2 {
+        font-size: 24px; /* Adjust font size for smaller screens */
+    }
+
+    #productTable th, #productTable td {
+        font-size: 12px; /* Adjust font size for smaller screens */
+    }
+
+    #productImage {
+        max-width: 150px; /* Adjust image size for smaller screens */
+        max-height: 150px;
+    }
+}
+
+/* Media query for very small screens (max-width: 300px) */
+@media (max-width: 300px) {
+    .header h2 {
+        font-size: 20px; /* Further adjust font size for very small screens */
+    }
+}
+
+#clearBuy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-block: 30px;
+   
+     
+  }
+  #clearBuy button {
+    margin: 6px;
+  }
